# discord-backup-util

./: .gitignore  Cargo.toml  LICENSE  README.md  backup_config
.cargo/: config.toml
.github/workflows/: check.yml  publish.yml
src/: config.rs  hook.rs  log.rs  main.rs  temp.rs  upload.rs
