[package]
name = "discord-backup-util"
version = "0.1.1"
authors = ["buj"]
license = "AGPL3-or-later"
description = "A tiny tool to backup stuff to Discord"
readme = "README.md"
homepage = "https://github.com/5GameMaker/discord-backup-util"
repository = "https://github.com/5GameMaker/discord-backup-util"
keywords = ["cli", "discord"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
ureq = "2.10.1"
zip = { version = "2.2.0", features = ["aes", "deflate-zlib"] }
