[package]
name = "discord-backup-util"
version = "0.2.3"
authors = ["buj"]
license = "AGPL3-or-later"
description = "A tiny tool to backup stuff to Discord"
readme = "README.md"
homepage = "https://github.com/5GameMaker/discord-backup-util"
repository = "https://github.com/5GameMaker/discord-backup-util"
keywords = ["cli", "discord"]
categories = ["command-line-utilities"]
edition = "2021"

[features]
default = ["ureq"]
minreq = ["dep:minreq"]
ureq = ["dep:ureq"]

[dependencies]
minreq = { version = "2.12.0", features = ["https-bundled-probe"], optional = true }
rand = "0.8.5"
tinyjson = "2.5.1"
ureq = { version = "2.10.1", optional = true }
zip = { version = "2.2.0", features = ["aes", "aes-crypto", "deflate", "deflate-zlib", "deflate64"], default-features = false }
